--- a/HomeServer/compose.yml
+++ b/HomeServer/compose.yml
@@ -5,18 +5,18 @@ services:
     container_name: nextcloud-aio-mastercontainer
     volumes:
       - nextcloud_aio_mastercontainer:/mnt/docker-aio-config
-      - //var/run/docker.sock:/var/run/docker.sock:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
     ports:
       - ${NEXTCLOUD_PORT}:8080
     environment:
       - APACHE_PORT=${NEXTCLOUD_APACHE_PORT}
       - APACHE_IP_BINDING=${NEXTCLOUD_IP_BINDING}
       - SKIP_DOMAIN_VALIDATION=${NEXTCLOUD_SKIP_DOMAIN_VALIDATION}
-      - NEXTCLOUD_TRUSTED_DOMAINS=${NEXTCLOUD_TRUSTED_DOMAINS}
-      - NEXTCLOUD_DATADIR=${NEXTCLOUD_DATADIR}
-      - NEXTCLOUD_MEMORY_LIMIT=${NEXTCLOUD_MEMORY_LIMIT}
-      - NEXTCLOUD_UPLOAD_LIMIT=${NEXTCLOUD_UPLOAD_LIMIT}
-      - NEXTCLOUD_OVERWRITEHOST=${NEXTCLOUD_OVERWRITEHOST}
+      # - NEXTCLOUD_TRUSTED_DOMAINS=${NEXTCLOUD_TRUSTED_DOMAINS}
+      # - NEXTCLOUD_DATADIR=${NEXTCLOUD_DATADIR}
+      # - NEXTCLOUD_MEMORY_LIMIT=${NEXTCLOUD_MEMORY_LIMIT}
+      # - NEXTCLOUD_UPLOAD_LIMIT=${NEXTCLOUD_UPLOAD_LIMIT}
+      # - NEXTCLOUD_OVERWRITEHOST=${NEXTCLOUD_OVERWRITEHOST}
 
 volumes:
   nextcloud_aio_mastercontainer:
